# warp-ohos

./: .gitignore  CLAUDE.md  README.md  clone.sh  fetch-full-code.sh  git-push-retry.sh  update-patches.sh
.claude/: settings.local.json
.claude/skills/bugfix-report/: SKILL.md
.claude/skills/codemap-creator/: SKILL.md
.claude/skills/ohos-develop-and-port-guide/: SKILL.md
.claude/skills/warp-codemap/: SKILL.md  SKILL.md.bak
.claude/worktrees/agent-a7e7913d/: ohos_logger.rs
.claude/worktrees/agent-a7e7913d/.claude/: settings.local.json
hap/: .gitignore  build-hap.sh  build-profile.json5  oh-package-lock.json5  oh-package.json5
hap/.bitfun/: .code  .command  .mdf  .symbol  configs.json  project.json
hap/.bitfun/.deveco/: project.cache.json
hap/.hvigor/cache/: file-cache.json  last-build-info.json  meta.json  project-config.json  task-cache.json
hap/.hvigor/dependencyMap/: dependencyMap.json5  oh-package.json5
hap/.hvigor/dependencyMap/entry/: oh-package.json5
hap/.hvigor/dependencyMap/native_ability/: oh-package.json5
hap/.hvigor/outputs/build-logs/: build.log.1
hap/.hvigor/outputs/logs/details/: details.json
hap/.hvigor/outputs/records/: performance-recorder.json
hap/.hvigor/outputs/sync/: output.json  taskInfo.json
hap/.hvigor/report/: report-202607182037046050.json  report-202607182037098510.json  report-202607182037406920.json  report-202607182038485710.json  report-202607182038536660.json  report-202607182038582210.json  report-202607182039082500.json  report-202607182039170430.json  report-202607182039262460.json  report-202607182040174560.json  report-202607182150286750.json  report-202607182150340940.json  report-202607182150497260.json
hap/AppScope/: app.json5
hap/AppScope/resources/base/element/: string.json
hap/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
hap/entry/src/main/: module.json5
hap/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  napi_utils.h
hap/entry/src/main/cpp/bridge/: shell_bridge_process.cpp
hap/entry/src/main/cpp/services/: service_clipboard.cpp  service_display.cpp  service_file_picker.cpp  service_font_render.cpp  service_ime.cpp  service_notification.cpp  service_shell_bridge.cpp  service_theme.cpp  service_tsfn.cpp  service_url.cpp
hap/entry/src/main/cpp/types/libwarp/: Index.d.ts  oh-package.json5
hap/entry/src/main/ets/entryability/: EntryAbility.ets
hap/entry/src/main/ets/pages/: Index.ets
hap/entry/src/main/resources/base/element/: color.json  float.json  string.json
hap/entry/src/main/resources/base/profile/: main_pages.json
hap/entry/src/main/resources/dark/element/: color.json
hap/entry/src/ohosTest/: module.json5
hap/oh_modules/.ohpm/: lock.json5
hap/oh_modules/.ohpm/oh_modules/@ohos/: hamock
hap/oh_modules/@ohos/: hypium
hap/oh_modules/@ohos-rs/ability/: index.ets  oh-package.json5
hap/oh_modules/@ohos-rs/ability/src/main/: module.json5
hap/oh_modules/@ohos-rs/ability/src/main/ets/ability/: NativeAbility.ets  type.ets
hap/oh_modules/@ohos-rs/ability/src/main/ets/components/: DefaultXComponent.ets  MainPage.ets
hap/oh_modules/@ohos-rs/ability/src/main/ets/helper/: index.ets  loadable.ets  object.ts  os.ets  permission.ets  random.ets
hap/oh_modules/@ohos-rs/ability/src/main/ets/webview/: DefaultWebview.ets  Utils.ets
patches/: gettext-sys-0.21.3.patch  interprocess-1.2.1.patch  nix-0.26.4.patch
patches/gettext-sys/: 00-tracked.patch
patches/interprocess/: 00-tracked.patch
patches/nix/: 00-tracked.patch
patches/openharmony-ability/: 00-tracked.patch  01-new-files.patch  full.patch
patches/warp/: 00-tracked.patch  01-new-files.patch
patches/warp/app/assets/bundled/bootstrap/: sh_body.sh
patches/warp/app/src/platform/ohos/: hap_lifecycle.rs  mod.rs  ohos_entry.rs  ohos_shell_bridge.rs
patches/warp/app/src/platform/ohos/hap/AppScope/: app.json5
patches/warp/app/src/platform/ohos/hap/entry/src/main/: module.json5
patches/warp/app/src/platform/ohos/hap/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
patches/warp/app/src/platform/ohos/hap/entry/src/main/cpp/services/: service_file_picker.cpp  service_font_render.cpp  service_theme.cpp  service_url.cpp
patches/warp/app/src/platform/ohos/hap/entry/src/main/ets/entryability/: EntryAbility.ets
patches/warp/app/src/platform/ohos/hap/entry/src/main/resources/base/profile/: main_pages.json
patches/warp/app/src/platform/ohos/hap/hap_cer/: default_hap2DczzieCAAC8OIilADrrR3iBn6181Rz3ruE3Gam8Dkg.cer  default_hap2DczzieCAAC8OIilADrrR3iBn6181Rz3ruE3Gam8Dkg.csr  default_hap2DczzieCAAC8OIilADrrR3iBn6181Rz3ruE3Gam8Dkg.p12  default_hap2DczzieCAAC8OIilADrrR3iBn6181Rz3ruE3Gam8Dkg.p7b  default_warp_ohosRVQngEjnYb8IXWuvSF82626Oqkv_xAFP-j_LkfYRnQU.cer  default_warp_ohosRVQngEjnYb8IXWuvSF82626Oqkv_xAFP-j_LkfYRnQU.csr  default_warp_ohosRVQngEjnYb8IXWuvSF82626Oqkv_xAFP-j_LkfYRnQU.p12  default_warp_ohosRVQngEjnYb8IXWuvSF82626Oqkv_xAFP-j_LkfYRnQU.p7b  default_warp_ohoseYL7fUar8FZr9WpnJKNP4rXhsQSoP8EmLal5jXNFERU.cer  default_warp_ohoseYL7fUar8FZr9WpnJKNP4rXhsQSoP8EmLal5jXNFERU.csr  default_warp_ohoseYL7fUar8FZr9WpnJKNP4rXhsQSoP8EmLal5jXNFERU.p12  default_warp_ohoseYL7fUar8FZr9WpnJKNP4rXhsQSoP8EmLal5jXNFERU.p7b  warp-ohos.cer  warp-ohos.csr  warp-ohos.p12
patches/warp/app/src/terminal/audible_bell/: ohos_audible_bell.rs
patches/warp/app/src/util/file/external_editor/: ohos.rs
patches/warp/crates/warp_logging/src/: ohos.rs
patches/warp/crates/warpui/src/platform/ohos/: app.rs  fonts.rs  mod.rs
patches/warp/crates/warpui/src/windowing/ohos/: mod.rs  ohos_delegate.rs  ohos_trusted_window.rs  ohos_window_manager.rs
patches/warp/script/ohos/: build-vm.sh  build.sh  bundle  check.sh  install_build_deps  make_app_icon.py
patches/wgpu/: 00-tracked.patch
patches/winit/: 00-tracked.patch  01-new-files.patch  full.patch
